# quick

./: .gitattributes  .gitignore  CONTRIBUTING.md  Contributing.md  DEVELOPING.md  Developing.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirments.txt  ruff.toml
.github/workflows/: python-publish-pypi.yaml  tests.yml
notebooks/: CUDAQ MPS PR.ipynb  Creating and Manipulating Circuits.ipynb  Learning cuda-quantum.ipynb  Preparing Quantum States and Operators.ipynb  Preparing Quantum States.ipynb  Pytket converter.ipynb  Running Quantum Circuits.ipynb  Testing some stuff.ipynb  Unitary synthesis.ipynb  Using Bra-Ket Interface.ipynb  Using Bra-Ket notation.ipynb
qickit/: __init__.py
qickit/backend/: __init__.py  backend.py
qickit/circuit/: __init__.py  circuit.py  circuit_utils.py  cirqcircuit.py  cudaqcircuit.py  dwavecircuit.py  pennylanecircuit.py  qiskitcircuit.py  tketcircuit.py
qickit/circuitoptimizer/: __init__.py  circuitoptimizer.py
qickit/compiler/: compiler.py
qickit/data/: __init__.py  data.py
qickit/optimizer/: __init__.py  optimizer.py  qiskit_transpiler.py  tket2optimizer.py
qickit/primitives/: __init__.py  bra.py  ket.py  operator.py  quantum_expression.py
qickit/synthesis/: __init__.py  statepreparation.py  statepreparation_utils.py  unitarypreparation.py
qickit/types/: __init__.py  circuit_type.py  collection.py  scalar.py  scalar_type.py
quick/: __init__.py
quick/backend/: __init__.py  backend.py
quick/circuit/: __init__.py  circuit.py  circuit_utils.py  cirqcircuit.py  pennylanecircuit.py  qiskitcircuit.py  quimbcircuit.py  tketcircuit.py
quick/compiler/: __init__.py  compiler.py
quick/metrics/: __init__.py  metrics.py
quick/optimizer/: __init__.py  optimizer.py  qiskit_transpiler.py  tket2optimizer.py
quick/predicates/: __init__.py  predicates.py
quick/primitives/: __init__.py  bra.py  ket.py  operator.py
quick/random/: __init__.py  random.py
quick/synthesis/: __init__.py
stubs/qickit/: __init__.pyi
stubs/quick/: __init__.pyi
tester/circuit/: __init__.py  test_all_circuits.py  test_circuit.py  test_cirq_circuit.py  test_dwave_circuit.py  test_pennylane_circuit.py  test_qiskit_circuit.py  test_tket_circuit.py
tests/: __init__.py  conftest.py
tests/backend/: __init__.py  test_aer_backend.py  test_backend.py  test_ibm_backend.py  test_noisy_aer_backend.py
tests/circuit/: __init__.py  gate_utils.py  test_all_circuits.py  test_circuit.py  test_circuit_base.py  test_circuit_convert.py  test_circuit_decompose.py  test_circuit_dunder_methods.py  test_circuit_from_cirq.py  test_circuit_from_qiskit.py  test_circuit_from_tket.py  test_circuit_to_controlled.py  test_cirq_circuit.py  test_control_state.py  test_cudaq_circuit.py  test_from_framework.py  test_pennylane_circuit.py  test_qft_circuit.py  test_qiskit_circuit.py  test_quimb_circuit.py  test_tket_circuit.py  test_uniformly_controlled_gates.py  utils.py
tests/compiler/: __init__.py  test_compiler.py  test_shende_compiler.py
tests/data/: __init__.py  test_data.py
tests/metrics/: __init__.py  test_metrics.py
tests/predicates/: __init__.py  test_predicates.py
tests/primitives/: __init__.py  test_bra.py  (+2 more)
(+628 files in other folders)
