[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qickit"
version = "0.0.0"
dependencies = [
    "cirq-core == 1.4.1",
    "cuda-quantum == 0.8.0",
    "mypy == 1.10.0",
    "numpy == 1.26.4",
    "pennylane == 0.38.0",
    "pennylane-lightning == 0.38.0",
    "pytket == 1.32.0",
    "pytket-qiskit == 0.56.0",
    "pytket-cirq == 0.37.0",
    "pytest == 8.2.2",
    "pytest-mock == 3.14.0",
    "qiskit == 1.2.2",
    "qiskit_aer == 0.15.0",
    "qiskit-aer-gpu == 0.15.0",
    "qiskit_ibm_runtime == 0.30.0",
    "qiskit-transpiler-service == 0.4.8",
    "ruff == 0.6.8",
    "tket2 == 0.3.0"
]
requires-python = "==3.11.9"
authors = [
  {name = "Amir Ali Malekani Nezhad", email = "amiralimlk@qualitioncomputing.com"},
]
maintainers = [
  {name = "Amir Ali Malekani Nezhad", email = "amiralimlk@qualitioncomputing.com"}
]
description = "Qickit is an agnostic gate-based circuit SDK, providing an integrated interface for using any supported quantum circuit framework seamlessly."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["quantum computing", "quantum circuit"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Repository = "https://github.com/qualition/qickit.git"
"Bug Tracker" = "https://github.com/qualition/qickit/issues"

[tool.setuptools]
py-modules = ["qickit"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "qickit"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["disabled"]